PyMaker/datas/object2/RawHTML/i6101/Python_DOC_referPages.why-am-i-getting-this-syntax-error-keyword-cant-be-an-expression.txt
<div class="post-text" itemprop="text">
<pre><code>def multiply():
    number_1 = int (input ("Please insert the first number for multiplication:"))
    number_2 = int (input ("Please insert the second number for multiplication:"))
    result = str (number_1*number_2)
    return print (number_1*number_2=result)
multiply()
</code></pre>
<p>I am getting the Following error when trying to execute the following function.</p>
<pre><code>    return print (number_1*number_2=result)               
                 ^
SyntaxError: keyword can't be an expression
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You are defining a keyword argument by using <code>=</code>:</p>
<pre><code>...(number_1*number_2=result)
                     ^
</code></pre>
<p>That makes everything <em>before</em> the <code>=</code> a Python expression, namely <code>number_1 * number_2</code>. Python doesn't allow this.</p>
<p>If you wanted to print out a nicely formatted expression, you'll have to use separate string arguments:</p>
<pre><code>print(number_1, '*', number_2, '=', result)
</code></pre>
<p>Python writes out separate arguments with a space to separate them (but you can use <code>sep='...'</code> to set a different string to separate them, including the <em>empty</em> string to have no separation at all).</p>
<p>Note that you don't actually have to convert <code>result</code> to a string here, the <code>print()</code> function converts all arguments to strings before writing them to the console.</p>
<p>You could also learn about <a href="https://pyformat.info/" rel="nofollow noreferrer">Python string formatting</a>, which gives you a bit more control over the whitespace handling, as well as alignment end value formatting, for example.</p>
<p>The following would print out your numbers and the result as part of a format string with the same amount of spaces:</p>
<pre><code>print('{} * {} = {}'.format(number_1, number_2, result))
</code></pre>
<p>Each <code>{}</code> placeholder is then filled with the next argument you passed into the <a href="https://docs.python.org/3/library/stdtypes.html#str.format" rel="nofollow noreferrer"><code>str.format()</code> method</a>. You can remove the spaces here too if you wanted to.</p>
<p>Last, but not least, the <code>print()</code> function always returns <code>None</code>. You don't have to return that from your function, remove the <code>return</code>. Your actual use of the <code>multiply</code> function doesn't use the returned value anyway:</p>
<pre><code>def multiply():
    number_1 = int(input("Please insert the first number for multiplication:"))
    number_2 = int(input("Please insert the second number for multiplication:"))
    result = number_1 * number_2
    print(number_1, '*', number_2, '=', result)

multiply()
</code></pre>
</div>
<div class="post-text" itemprop="text">
<blockquote>
<p>Why am I getting this syntax error: keyword can't be an expression</p>
</blockquote>
<p>Because what you write in parentheses after a function name (including <code>print</code> in python3) are arguments of the function. Any argument written in the form <code>keyword=value</code> is a <a href="https://docs.python.org/3.6/tutorial/controlflow.html#keyword-arguments" rel="nofollow noreferrer">keyword argument</a>. You cannot use an expression (here a product) as a keyword.</p>
</div>
<div class="post-text" itemprop="text">
<p>I assume you want output like</p>
<pre><code>number_1*number2 = 6
</code></pre>
<p>The first part of this is some fixed text you want printed. Thus you need to put in in a string and print that. You can print multiple things like <code>print(a, b)</code>. This should be enough for you to figure out </p>
</div>
<div class="post-text" itemprop="text">
<p>You have two issues:</p>
<p>You are writing an expression inside a print statement. Instead you want to make a formatted string and substitute the values into the string:</p>
<p><code>print("%d*%d=%s" % (number_1, number_2, result))</code></p>
<p>Secondly, you don't need to return it.</p>
</div>
<span class="comment-copy">You don't need to return a print statement.  Choose one or the other</span>
<span class="comment-copy">Because you're literally doing <code>return print ()</code>. Your code is a mess. Please read a basic python tutorial and try to understand what you're doing with it...</span>
<span class="comment-copy">@Nepho It's not the <code>return print</code>, it's the <code>a*b=c</code> inside a <code>print()</code>.</span>
<span class="comment-copy">@Nepho: in Python 3, <code>print()</code> is a function. It always returns <code>None</code>, but you <i>can</i> return that result. <code>return print(...)</code> is perfectly valid syntax in Python 3. In Python 2, unless you use a <code>__future__</code> import statement, <code>print</code> is a <i>statement</i> and can't be part of a <code>return</code> statement. You'd get a different syntax error however.</span>
<span class="comment-copy">@Nepho: your (eroneously) upvoted comment above suggested otherwise. The error is not because they are doing <code>return print ()</code>.</span>
<span class="comment-copy">Thank you very much.</span>
